// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Copy dataset member Failure scenarios Shouldn't be able to copy a data set member with invalid enqueue type 1`] = `
"
Syntax Error:
No value specified for option:
--enqueue

This option requires a value of type:
string

Option Description:
Specify this option to choose the enqueue type for the \`to\` data set

Syntax Error:
Invalid value specified for option:
--enqueue (--enq)

You specified:


The value must match one of the following regular expressions:
[ 'EXCLU', 'SHR', 'SHRW' ].

Example:

 - Copy the data set member in data set 'user.from.set' with name 'member.name'
 to data set 'user.to.set' with member name 'member.name':

      $ zowe zos-files copy data-set-member \\"user.from.set\\" \\"member.name\\" \\"user.to.set\\" \\"member.name\\"

Use \\"zowe zos-files copy data-set-member --help\\" to view command description, usage, and options.
"
`;

exports[`Copy dataset member Failure scenarios Shouldn't be able to copy a data set member with invalid enqueue type 2`] = `
"================Z/OS FILES COPY DATA SET===============
"
`;

exports[`Copy dataset member Failure scenarios Shouldn't be able to replace a data set member without --replace flag 1`] = `
"================Z/OS FILES COPY DATA SET===============
"
`;

exports[`Copy dataset member Success scenarios Should copy a data set member with alias = true 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy dataset member Success scenarios Should copy a data set member with enqueue = SHRW 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy dataset member Success scenarios Should copy a data set member with from and to volume specified 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy dataset member Success scenarios Should copy a single member 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy dataset member Success scenarios Should copy a single member and replace existing members 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy dataset member Success scenarios Should copy all members of a data set 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;
